--- a/src/Translation/en/Contact.yaml
+++ b/src/Translation/en/Contact.yaml
@@ -8,5 +8,6 @@ or-send-email-to: Or send us an email to
 res-ok: Your message has been sent successfully.
 res-invalid: The message body is not valid.
 contains-link: Do not include links or email addresses in the name or message.
+empty-err-msg: Empty error message.
 res-err: There was an error sending your message. Sorry for the inconvenience.
 res-err-sent: The error message has been reported to the admin. Thank you for your collaboration and sorry for the inconvenience.
