feat(Translation): add Privacy-related files

--- a/src/Translation/ca/Main.yaml
+++ b/src/Translation/ca/Main.yaml
@@ -4,3 +4,4 @@ pericos-de-sant-cugat: Pericos de Sant Cugat
 advertising-and-business: Publicitat i empresa
 work-with-us: Treballa amb nosaltres
 contact: Contacte
+privacy-policy: Política de privacitat
