--- a/src/Translation/ca/Structure.yaml
+++ b/src/Translation/ca/Structure.yaml
@@ -4,3 +4,4 @@ pericos-de-sant-cugat: pericos-de-sant-cugat
 advertising-and-business: publicitat-i-empresa
 work-with-us: treballa-amb-nosaltres
 contact: contacte
+privacy-policy: politica-de-privacitat
