--- a/src/Translation/es/Main.yaml
+++ b/src/Translation/es/Main.yaml
@@ -4,3 +4,4 @@ pericos-de-sant-cugat: Pericos de Sant Cugat
 advertising-and-business: Publicidad y empresa
 work-with-us: Trabaja con nosotros
 contact: Contacto
+privacy-policy: Política de privacidad
