--- a/src/Translation/es/Structure.yaml
+++ b/src/Translation/es/Structure.yaml
@@ -4,3 +4,4 @@ pericos-de-sant-cugat: pericos-de-sant-cugat
 advertising-and-business: publicidad-y-empresa
 work-with-us: trabaja-con-nosotros
 contact: contacto
+privacy-policy: politica-de-privacidad
