--- a/src/Translation/en/Main.yaml
+++ b/src/Translation/en/Main.yaml
@@ -4,3 +4,4 @@ pericos-de-sant-cugat: Pericos de Sant Cugat
 advertising-and-business: Advertising and business
 work-with-us: Work with us
 contact: Contact
+privacy-policy: Privacy Policy
