--- a/src/Translation/en/Structure.yaml
+++ b/src/Translation/en/Structure.yaml
@@ -4,3 +4,4 @@ pericos-de-sant-cugat: pericos-de-sant-cugat
 advertising-and-business: advertising-and-business
 work-with-us: work-with-us
 contact: contact
+privacy-policy: privacy-policy
