feat(Translation): add Activities class

--- a/src/Translation/ca/Structure.yaml
+++ b/src/Translation/ca/Structure.yaml
@@ -5,3 +5,4 @@ advertising-and-business: publicitat-i-empresa
 work-with-us: treballa-amb-nosaltres
 contact: contacte
 privacy-policy: politica-de-privacitat
+activities: activitats
