--- a/src/Translation/en/Structure.yaml
+++ b/src/Translation/en/Structure.yaml
@@ -5,3 +5,4 @@ advertising-and-business: advertising-and-business
 work-with-us: work-with-us
 contact: contact
 privacy-policy: privacy-policy
+activities: activities
