--- a/src/Translation/es/Structure.yaml
+++ b/src/Translation/es/Structure.yaml
@@ -5,3 +5,4 @@ advertising-and-business: publicidad-y-empresa
 work-with-us: trabaja-con-nosotros
 contact: contacto
 privacy-policy: politica-de-privacidad
+activities: actividades
