feat(Translations): add privacy-policy schema key

--- a/src/Translation/schemas/Main.schema.json
+++ b/src/Translation/schemas/Main.schema.json
@@ -27,6 +27,10 @@
     "contact": {
       "type": "string",
       "pattern": "^[A-Z].*(?<![.])$"
+    },
+    "privacy-policy": {
+      "type": "string",
+      "pattern": "^[A-Z].*(?<![.])$"
     }
   }
 }
