feat(Translations): add la-cerdanya-2021 key
* add Privacy files newline

--- a/src/Translation/en/Main.yaml
+++ b/src/Translation/en/Main.yaml
@@ -5,3 +5,4 @@ advertising-and-business: Advertising and business
 work-with-us: Work with us
 contact: Contact
 privacy-policy: Privacy Policy
+la-cerdanya-2021: La Cerdanya 2021
