--- a/src/Translation/es/Main.yaml
+++ b/src/Translation/es/Main.yaml
@@ -5,3 +5,4 @@ advertising-and-business: Publicidad y empresa
 work-with-us: Trabaja con nosotros
 contact: Contacto
 privacy-policy: Política de privacidad
+la-cerdanya-2021: La Cerdanya 2021
