--- a/src/Translation/ca/Main.yaml
+++ b/src/Translation/ca/Main.yaml
@@ -5,3 +5,4 @@ advertising-and-business: Publicitat i empresa
 work-with-us: Treballa amb nosaltres
 contact: Contacte
 privacy-policy: Política de privacitat
+la-cerdanya-2021: La Cerdanya 2021
